CREATE TABLE users (
  user_id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  upn VARCHAR(60) NOT NULL
);

CREATE TABLE rooms (
  room_id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  room_name VARCHAR(50) NOT NULL,
  owner_id INT NOT NULL,
  closed BOOLEAN NOT NULL DEFAULT FALSE
);

CREATE TABLE users_in_rooms (
  user_in_room_id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  user_id INT NOT NULL,
  room_id INT NOT NULL,
  UNIQUE (user_id, room_id)
);

CREATE TABLE tickets (
  ticket_id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  ticket_name VARCHAR(250) NOT NULL,
  room_id INT NOT NULL
);

CREATE TABLE votes (
  vote_id INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  user_in_room_id INT NOT NULL,
  vote INT CHECK (vote IS NULL OR (vote >= 1 AND vote <= 5)),
  ticket_id INT NOT NULL
);

ALTER TABLE users_in_rooms ADD FOREIGN KEY (user_id) REFERENCES users (user_id);

ALTER TABLE users_in_rooms ADD FOREIGN KEY (room_id) REFERENCES rooms (room_id);

ALTER TABLE tickets ADD FOREIGN KEY (room_id) REFERENCES rooms (room_id);

ALTER TABLE votes ADD FOREIGN KEY (user_in_room_id) REFERENCES users_in_rooms (user_in_room_id);

ALTER TABLE votes ADD FOREIGN KEY (ticket_id) REFERENCES tickets (ticket_id);
